# openmrn

./: .clang-format  .gitignore  CLAUDE.md  DISTCC.md  LICENSE.md  Makefile  README.md  README.txt  RELEASE.md  THROTTLING.md  event_handler_performance.txt  fix_includes.py  library.json
arduino/idf/: CMakeLists.txt  README.md
etc/esp-idf/: CMakeLists.txt  README.md  idf_component.yml
src/: CMakeLists.txt
src/ble/: Advertisement.cxx  Advertisement.cxxtest  Advertisement.hxx  Connection.hxx  Defs.cxx  Defs.cxxtest  Defs.hxx  Service.hxx
src/cJSON/: cJSON.c  cJSON.h  sources  test.c
src/console/: Console.cxx  Console.cxxtest  Console.hxx  FileCommands.hxx  GeneralCommands.hxx
src/core/: nmranet_alias.c  nmranet_alias.h  nmranet_buf.c  nmranet_buf.h  nmranet_datagram.c  nmranet_datagram.h  nmranet_datagram_private.h  nmranet_event.c  nmranet_event.h  nmranet_event_private.h  nmranet_memory_config.c  nmranet_node.c  nmranet_node.h  nmranet_node_id.c  nmranet_node_id.h  nmranet_node_private.h  nmranet_router.c  nmranet_router.h  nmranet_train_control.c  nmranet_train_control.h
src/cue/: volatile_state.cxx  volatile_state.cxxtest  volatile_state.hxx
src/dcc/: Address.hxx  DccDebug.cxx  DccDebug.cxxtest  DccDebug.hxx  DccOutput.hxx  Defs.cxx  Defs.cxxtest  Defs.hxx  FakeTrackIf.hxx  LocalTrackIf.cxx  LocalTrackIf.hxx  Loco.cxx  Loco.hxx  Logon.cxxtest  Logon.hxx  LogonFeedback.cxxtest  LogonFeedback.hxx  LogonModule.hxx  Packet.cxx  Packet.cxxtest  Packet.hxx  PacketFlowInterface.hxx  PacketProcessor.hxx  PacketSource.hxx  ProgrammingTrackBackend.hxx  README  RailCom.cxx  RailCom.cxxtest  RailCom.hxx  RailcomBroadcastDecoder.cxx  RailcomBroadcastDecoder.hxx  RailcomDebug.cxx  RailcomHub.hxx  RailcomPortDebug.hxx  Receiver.hxx  SimpleUpdateLoop.cxx  SimpleUpdateLoop.hxx  TrackIf.hxx  UpdateLoop.cxx  UpdateLoop.hxx  (+4 more)
src/executor/: Allocator.cxx  Allocator.hxx  AsyncNotifiableBlock.cxx  AsyncNotifiableBlock.cxxtest  AsyncNotifiableBlock.hxx  Atomic.hxx  CallableFlow.hxx  ControlFlow.hxx  Dispatcher.cxxtest  Dispatcher.hxx  Executable.hxx  Executor.cxx  Executor.hxx  Message.hxx  Notifiable.cxx  Notifiable.cxxtest  Notifiable.hxx  PoolToQueueFlow.hxx  Selectable.hxx  SemaphoreNotifiableBlock.hxx  Service.cxx  Service.hxx  StateFlow.cxx  StateFlow.cxxtest  StateFlow.hxx  Timer.cxx  Timer.cxxtest  Timer.hxx  allocator.cxx  allocator.hxx  control_flow.cxx  control_flow.hxx  executor.cxx  executor.hxx  lock.hxx  notifiable.cxx  notifiable.hxx  queue.hxx  sources
src/freertos_drivers/: sources
src/freertos_tcp/: sources
src/httpd/: HTTP_Method.hxx  HttpReply.cxx  HttpReply.hxx  HttpRequest.cxx  HttpRequest.hxx  Httpd.cxx  Httpd.hxx  RequestHandler.hxx  Uri.hxx  mimetable.cxx  mimetable.hxx
src/if/: nmranet_can_if.c  nmranet_can_if.h  nmranet_gc_if.c  nmranet_gc_if.h  nmranet_if.c  nmranet_if.h  nmranet_lo_if.c  nmranet_lo_if.h
src/nmranet/: AliasAllocator.cxx  AliasAllocator.cxxtest  AliasAllocator.hxx  AliasCache.cxx  AliasCache.cxxtest  AliasCache.hxx  AsyncAliasAllocator.cxx  AsyncAliasAllocator.hxx  AsyncIf.cxx  AsyncIf.hxx  AsyncIfCan.cxx  AsyncIfCan.hxx  AsyncIfCanImpl.hxx  AsyncIfImpl.cxx  AsyncIfImpl.hxx  BlinkerFlow.hxx  Bootloader.cxx  Bootloader.cxxtest  Bootloader.hxx  BootloaderClient.hxx  BootloaderDg.cxxtest  BootloaderPort.hxx  CallbackEventHandler.cxxtest  CallbackEventHandler.hxx  CanDefs.cxx  CanDefs.hxx  CanRoutingHub.cxxtest  CanRoutingHub.hxx  CompileCdiMain.cxx  ConfigEntry.cxx  ConfigEntry.hxx  ConfigRenderer.cxxtest  ConfigRenderer.hxx  ConfigRepresentation.cxxtest  ConfigRepresentation.hxx  ConfigUpdateFlow.cxx  ConfigUpdateFlow.cxxtest  ConfigUpdateFlow.hxx  ConfiguredConsumer.hxx  ConfiguredProducer.hxx  (+153 more)
src/openlcb/: AliasAllocator.cxx  AliasAllocator.cxxtest  AliasAllocator.hxx  AliasCache.cxx  AliasCache.cxxtest  AliasCache.hxx  ApplicationChecksum.hxx  BLEAdvertisement.cxx  BLEAdvertisement.cxxtest  BLEAdvertisement.hxx  BLEDefs.hxx  BLEGattClient.hxx  BLEHubPort.hxx  BLEService.cxx  BLEService.hxx  Bootloader.cxxtest  Bootloader.hxx  BootloaderClient.hxx  BootloaderDg.cxxtest  BootloaderPort.hxx  BroadcastTime.cxx  BroadcastTime.hxx  BroadcastTimeAlarm.cxxtest  BroadcastTimeAlarm.hxx  BroadcastTimeClient.cxx  BroadcastTimeClient.cxxtest  BroadcastTimeClient.hxx  BroadcastTimeDefs.cxx  BroadcastTimeDefs.cxxtest  BroadcastTimeDefs.hxx  BroadcastTimeServer.cxx  BroadcastTimeServer.cxxtest  BroadcastTimeServer.hxx  BulkAliasAllocator.cxx  BulkAliasAllocator.hxx  CDIUtils.hxx  CallbackEventHandler.cxxtest  CallbackEventHandler.hxx  CanDefs.hxx  CanFilter.cxxtest  (+179 more)
src/os/: FakeClock.cxx  FakeClock.cxxtest  FakeClock.hxx  Gpio.cxx  Gpio.hxx  LinuxGpio.hxx  LinuxPWM.hxx  MDNS.cxx  MDNS.hxx  MmapGPIO.hxx  MmapGpio.hxx  OS.cxx  OS.cxxtest  OS.hxx  OSImpl.cxx  OSInterrupt.hxx  OSSelectWakeup.cxx  OSSelectWakeup.hxx  TempFile.cxx  TempFile.hxx  bget.c  bget_impl.c  bget_impl.h  logging_malloc.cxx  os.c  os.h  os_private.h  sleep.h  sources  stack_malloc.c  watchdog.c  watchdog.h
src/tinyxml2/: CMakeLists.txt  dox  sources  tinyxml2.h  xmltest.cpp
src/traction_modem/: Defs.cxxtest  Defs.hxx  Link.cxxtest  Link.hxx  MemorySpace.cxx  MemorySpace.cxxtest  MemorySpace.hxx  MemorySpaceServer.cxxtest  MemorySpaceServer.hxx  Message.hxx  ModemTrain.cxxtest  ModemTrain.hxx  ModemTrainHwInterface.hxx  Output.cxx  Output.cxxtest  Output.hxx  ProgramTrack.cxxtest  ProgramTrack.hxx  README.md  RxFlow.hxx  RxTxFlow.cxxtest  TractionModem.cxxtest  TractionModem.hxx  TractionModemDefs.cxxtest  TractionModemDefs.hxx  Train.hxx  TxFlow.hxx  modem_test_helper.hxx
src/tractionmodem/: TractionModem.cxxtest  TractionModem.hxx  TractionModemDefs.hxx
src/utils/: ActivityLed.hxx  AesCcmTestVectors.hxx  AesCcmTestVectorsEx.hxx  Allocator.hxx  AsyncMutex.hxx  Atomic.hxx  AutoSyncFileFlow.hxx  BandwidthMerger.cxxtest  BandwidthMerger.hxx  Base64.cxx  Base64.cxxtest  Blinker.cxx  Blinker.cxxtest  Buffer.cxx  Buffer.hxx  BufferPort.hxx  BufferQueue.cxx  BufferQueue.cxxtest  BufferQueue.hxx  BusMaster.cxxtest  BusMaster.hxx  ByteBuffer.cxxtest  ByteBuffer.hxx  CanIf.cxx  (+177 more)
(+1686 files in other folders)
